# h6006ctl

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: HARDWARE_TESTING.md  PRIVACY.md  PROTOCOL.md
flipper/: README.md  application.fam  ble_connection.c  ble_connection.h  ble_scanner.c  ble_scanner.h  govee_control.c  govee_h6006.c  govee_h6006.h
src/h6006ctl/: __init__.py  ble.py  cache.py  cli.py  protocol.py
tests/: test_ble.py  test_cache.py  test_cli.py  test_protocol.py
